<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#29aaaaaa"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/lesson" />
        <TextView
            android:id="@+id/tv_item_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_item_icon"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/nama_materi" />
        <TextView
            android:id="@+id/tv_id_materi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60000000">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_lock"
            android:layout_gravity="center"
            android:contentDescription="@string/lock" />
    </FrameLayout>
</androidx.cardview.widget.CardView>